--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ DATABASE_URL=sqlite:///db.sqlite3
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_HOST_USER=wioletta.wajda82@gmail.com
-EMAIL_HOST_PASSWORD=............
+EMAIL_HOST_PASSWORD=hkkzduvwoijtpyli
 EMAIL_USE_TLS=True
 
 CELERY_BROKER_URL=redis://localhost.6379
